--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="top-container">
         <img class="top-cloud" src="image/cloud.png" alt="cloud-img">
         <h1>I'm David.</h1>
-        <h2><span class="pro">pro</span>grammer</h2>
+        <h2>a <span class="pro">pro</span>grammer</h2>
         <img class="bottom-cloud" src="image/cloud.png" alt="cloud-img">
         <img src="image/mountain.png" alt="mountain-img">
     </div>
